Add more error handling cases